isl-rs/src/aff.rs

  pub fn isl_pw_aff_isa_aff(pa: PwAffRef) -> Bool;
  pub fn isl_pw_aff_as_aff(pa: PwAff) -> Option<Aff>;
  pub fn isl_set_from_pw_aff(pwaff: PwAff) -> Option<Set>;
  pub fn isl_map_from_pw_aff(pwaff: PwAff) -> Option<Map>;
  pub fn isl_pw_aff_pos_set(pa: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_nonneg_set(pwaff: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_zero_set(pwaff: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_non_zero_set(pwaff: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_eq_set(pwaff1: PwAff, pwaff2: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_ne_set(pwaff1: PwAff, pwaff2: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_le_set(pwaff1: PwAff, pwaff2: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_lt_set(pwaff1: PwAff, pwaff2: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_ge_set(pwaff1: PwAff, pwaff2: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_gt_set(pwaff1: PwAff, pwaff2: PwAff) -> Option<Set>;
  pub fn isl_pw_aff_eq_map(pa1: PwAff, pa2: PwAff) -> Option<Map>;
  pub fn isl_pw_aff_le_map(pa1: PwAff, pa2: PwAff) -> Option<Map>;
  pub fn isl_pw_aff_lt_map(pa1: PwAff, pa2: PwAff) -> Option<Map>;
  pub fn isl_pw_aff_ge_map(pa1: PwAff, pa2: PwAff) -> Option<Map>;
  pub fn isl_pw_aff_gt_map(pa1: PwAff, pa2: PwAff) -> Option<Map>;
  pub fn isl_pw_aff_bind_domain(pa: PwAff, tuple: MultiId) -> Option<PwAff>;
  pub fn isl_pw_aff_bind_domain_wrapped_domain(pa: PwAff, tuple: MultiId) -> Option<PwAff>;
  pub fn isl_pw_aff_bind_id(pa: PwAff, id: Id) -> Option<Set>;
  pub fn isl_pw_aff_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<PwAff>;
  pub fn isl_pw_aff_to_str(pa: PwAffRef) -> Option<CString>;
  pub fn isl_printer_print_pw_aff(p: Printer, pwaff: PwAffRef) -> Option<Printer>;
  pub fn isl_pw_aff_dump(pwaff: PwAffRef) -> ();
  pub fn isl_pw_aff_list_min(list: PwAffList) -> Option<PwAff>;
  pub fn isl_pw_aff_list_max(list: PwAffList) -> Option<PwAff>;
  pub fn isl_pw_aff_list_eq_set(list1: PwAffList, list2: PwAffList) -> Option<Set>;
  pub fn isl_pw_aff_list_ne_set(list1: PwAffList, list2: PwAffList) -> Option<Set>;
  pub fn isl_pw_aff_list_le_set(list1: PwAffList, list2: PwAffList) -> Option<Set>;
  pub fn isl_pw_aff_list_lt_set(list1: PwAffList, list2: PwAffList) -> Option<Set>;
  pub fn isl_pw_aff_list_ge_set(list1: PwAffList, list2: PwAffList) -> Option<Set>;
  pub fn isl_pw_aff_list_gt_set(list1: PwAffList, list2: PwAffList) -> Option<Set>;
  pub fn isl_multi_aff_get_ctx(multi: MultiAffRef) -> Option<CtxRef>;
  pub fn isl_multi_aff_get_space(multi: MultiAffRef) -> Option<Space>;
  pub fn isl_multi_aff_get_domain_space(multi: MultiAffRef) -> Option<Space>;
  pub fn isl_multi_aff_get_list(multi: MultiAffRef) -> Option<AffList>;
  pub fn isl_multi_aff_from_aff_list(space: Space, list: AffList) -> Option<MultiAff>;
  pub fn isl_multi_aff_copy(multi: MultiAffRef) -> Option<MultiAff>;
  pub fn isl_multi_aff_free(multi: MultiAff) -> *mut c_void;
  pub fn isl_multi_aff_plain_is_equal(multi1: MultiAffRef, multi2: MultiAffRef) -> Bool;
  pub fn isl_multi_aff_reset_user(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_size(multi: MultiAffRef) -> c_int;
  pub fn isl_multi_aff_get_at(multi: MultiAffRef, pos: c_int) -> Option<Aff>;
  pub fn isl_multi_aff_get_aff(multi: MultiAffRef, pos: c_int) -> Option<Aff>;
  pub fn isl_multi_aff_set_at(multi: MultiAff, pos: c_int, el: Aff) -> Option<MultiAff>;
  pub fn isl_multi_aff_set_aff(multi: MultiAff, pos: c_int, el: Aff) -> Option<MultiAff>;
  pub fn isl_multi_aff_range_splice(multi1: MultiAff, pos: c_uint, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_flatten_range(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_flat_range_product(multi1: MultiAff, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_range_product(multi1: MultiAff, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_factor_range(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_range_is_wrapping(multi: MultiAffRef) -> Bool;
  pub fn isl_multi_aff_range_factor_domain(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_range_factor_range(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_align_params(multi: MultiAff, model: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_from_range(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_identity_multi_aff(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_identity(space: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_identity_on_domain_space(space: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_plain_cmp(multi1: MultiAffRef, multi2: MultiAffRef) -> c_int;
  pub fn isl_multi_aff_scale_val(multi: MultiAff, v: Val) -> Option<MultiAff>;
  pub fn isl_multi_aff_scale_down_val(multi: MultiAff, v: Val) -> Option<MultiAff>;
  pub fn isl_multi_aff_scale_multi_val(multi: MultiAff, mv: MultiVal) -> Option<MultiAff>;
  pub fn isl_multi_aff_scale_down_multi_val(multi: MultiAff, mv: MultiVal) -> Option<MultiAff>;
  pub fn isl_multi_aff_mod_multi_val(multi: MultiAff, mv: MultiVal) -> Option<MultiAff>;
  pub fn isl_multi_aff_add(multi1: MultiAff, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_sub(multi1: MultiAff, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_neg(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_add_constant_val(mpa: MultiAff, v: Val) -> Option<MultiAff>;
  pub fn isl_multi_aff_add_constant_multi_val(mpa: MultiAff, mv: MultiVal) -> Option<MultiAff>;
  pub fn isl_multi_aff_zero(space: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_involves_nan(multi: MultiAffRef) -> Bool;
  pub fn isl_multi_aff_dim(multi: MultiAffRef, type_: DimType) -> c_int;
  pub fn isl_multi_aff_drop_dims(multi: MultiAff, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiAff>;
  pub fn isl_multi_aff_involves_dims(multi: MultiAffRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_multi_aff_insert_dims(multi: MultiAff, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiAff>;
  pub fn isl_multi_aff_add_dims(multi: MultiAff, type_: DimType, n: c_uint) -> Option<MultiAff>;
  pub fn isl_multi_aff_project_domain_on_params(multi: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_insert_domain(multi: MultiAff, domain: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_involves_locals(multi: MultiAffRef) -> Bool;
  pub fn isl_multi_aff_find_dim_by_name(multi: MultiAffRef, type_: DimType, name: Option<CStr>) -> c_int;
  pub fn isl_multi_aff_find_dim_by_id(multi: MultiAffRef, type_: DimType, id: IdRef) -> c_int;
  pub fn isl_multi_aff_get_dim_id(multi: MultiAffRef, type_: DimType, pos: c_uint) -> Option<Id>;
  pub fn isl_multi_aff_set_dim_name(multi: MultiAff, type_: DimType, pos: c_uint, s: Option<CStr>) -> Option<MultiAff>;
  pub fn isl_multi_aff_set_dim_id(multi: MultiAff, type_: DimType, pos: c_uint, id: Id) -> Option<MultiAff>;
  pub fn isl_multi_aff_get_tuple_name(multi: MultiAffRef, type_: DimType) -> Option<CStr>;
  pub fn isl_multi_aff_has_tuple_id(multi: MultiAffRef, type_: DimType) -> Bool;
  pub fn isl_multi_aff_get_tuple_id(multi: MultiAffRef, type_: DimType) -> Option<Id>;
  pub fn isl_multi_aff_set_tuple_name(multi: MultiAff, type_: DimType, s: Option<CStr>) -> Option<MultiAff>;
  pub fn isl_multi_aff_set_tuple_id(multi: MultiAff, type_: DimType, id: Id) -> Option<MultiAff>;
  pub fn isl_multi_aff_reset_tuple_id(multi: MultiAff, type_: DimType) -> Option<MultiAff>;
  pub fn isl_multi_aff_product(multi1: MultiAff, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_splice(multi1: MultiAff, in_pos: c_uint, out_pos: c_uint, multi2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_bind_domain(multi: MultiAff, tuple: MultiId) -> Option<MultiAff>;
  pub fn isl_multi_aff_bind_domain_wrapped_domain(multi: MultiAff, tuple: MultiId) -> Option<MultiAff>;
  pub fn isl_multi_aff_unbind_params_insert_domain(multi: MultiAff, domain: MultiId) -> Option<MultiAff>;
  pub fn isl_multi_aff_from_aff(aff: Aff) -> Option<MultiAff>;
  pub fn isl_multi_aff_domain_map(space: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_range_map(space: Space) -> Option<MultiAff>;
  pub fn isl_multi_aff_project_out_map(space: Space, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiAff>;
  pub fn isl_multi_aff_multi_val_on_space(space: Space, mv: MultiVal) -> Option<MultiAff>;
  pub fn isl_multi_aff_get_constant_multi_val(ma: MultiAffRef) -> Option<MultiVal>;
  pub fn isl_multi_aff_floor(ma: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_gist_params(maff: MultiAff, context: Set) -> Option<MultiAff>;
  pub fn isl_multi_aff_gist(maff: MultiAff, context: Set) -> Option<MultiAff>;
  pub fn isl_multi_aff_lift(maff: MultiAff, ls: *mut LocalSpace) -> Option<MultiAff>;
  pub fn isl_multi_aff_pullback_multi_aff(ma1: MultiAff, ma2: MultiAff) -> Option<MultiAff>;
  pub fn isl_multi_aff_move_dims(ma: MultiAff, dst_type: DimType, dst_pos: c_uint, src_type: DimType, src_pos: c_uint, n: c_uint) -> Option<MultiAff>;
  pub fn isl_multi_aff_lex_lt_set(ma1: MultiAff, ma2: MultiAff) -> Option<Set>;
  pub fn isl_multi_aff_lex_le_set(ma1: MultiAff, ma2: MultiAff) -> Option<Set>;
  pub fn isl_multi_aff_lex_gt_set(ma1: MultiAff, ma2: MultiAff) -> Option<Set>;
  pub fn isl_multi_aff_lex_ge_set(ma1: MultiAff, ma2: MultiAff) -> Option<Set>;
  pub fn isl_multi_aff_bind(ma: MultiAff, tuple: MultiId) -> Option<BasicSet>;
  pub fn isl_multi_aff_to_str(ma: MultiAffRef) -> Option<CString>;
  pub fn isl_printer_print_multi_aff(p: Printer, maff: MultiAffRef) -> Option<Printer>;
  pub fn isl_multi_aff_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<MultiAff>;
  pub fn isl_multi_aff_dump(maff: MultiAffRef) -> ();
  pub fn isl_multi_pw_aff_get_ctx(multi: MultiPwAffRef) -> Option<CtxRef>;
  pub fn isl_multi_pw_aff_get_space(multi: MultiPwAffRef) -> Option<Space>;
  pub fn isl_multi_pw_aff_get_domain_space(multi: MultiPwAffRef) -> Option<Space>;
  pub fn isl_multi_pw_aff_get_list(multi: MultiPwAffRef) -> Option<PwAffList>;
  pub fn isl_multi_pw_aff_from_pw_aff_list(space: Space, list: PwAffList) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_copy(multi: MultiPwAffRef) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_free(multi: MultiPwAff) -> *mut c_void;
  pub fn isl_multi_pw_aff_plain_is_equal(multi1: MultiPwAffRef, multi2: MultiPwAffRef) -> Bool;
  pub fn isl_multi_pw_aff_reset_user(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_size(multi: MultiPwAffRef) -> c_int;
  pub fn isl_multi_pw_aff_get_at(multi: MultiPwAffRef, pos: c_int) -> Option<PwAff>;
  pub fn isl_multi_pw_aff_get_pw_aff(multi: MultiPwAffRef, pos: c_int) -> Option<PwAff>;
  pub fn isl_multi_pw_aff_set_at(multi: MultiPwAff, pos: c_int, el: PwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_set_pw_aff(multi: MultiPwAff, pos: c_int, el: PwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_range_splice(multi1: MultiPwAff, pos: c_uint, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_flatten_range(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_flat_range_product(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_range_product(multi1: MultiPwAff, multi2: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_factor_range(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_range_is_wrapping(multi: MultiPwAffRef) -> Bool;
  pub fn isl_multi_pw_aff_range_factor_domain(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_range_factor_range(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_align_params(multi: MultiPwAff, model: Space) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_from_range(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_identity_multi_pw_aff(multi: MultiPwAff) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_identity(space: Space) -> Option<MultiPwAff>;
  pub fn isl_multi_pw_aff_identity_on_domain_space(space: Space) -> Option<MultiPwAff>;
